{
    "version": 1,
    "name": "player",
    "maps": [
        {
            "name": "test",
            "id": "3559258d-8c0b-4bf9-89a1-d01c0473cc64",
            "actions": [
                {
                    "name": "check",
                    "type": "Button",
                    "id": "87a2252d-bd81-439c-a489-4276c041b570",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1d87c2a6-2320-4b0b-a737-e94b0100005c",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "check",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Crossy",
            "id": "ff3359d2-919e-46f9-8f3c-3bd79dcbf804",
            "actions": [
                {
                    "name": "move",
                    "type": "Value",
                    "id": "2c844dc5-096d-4def-a9b2-4c9093ab22d9",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "43e1328b-61c5-470d-98b8-4f4e3d634db8",
                    "path": "<Gamepad>/dpad",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "efdcbb6b-4634-4d24-a4cc-9e7b0a53056e",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Grandma",
            "id": "52283f7d-fda9-4f33-bf9e-b227a31b0ca9",
            "actions": [
                {
                    "name": "Player",
                    "type": "Value",
                    "id": "bd0141d3-fce0-433b-9450-f790681ef478",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "grandmaDown",
                    "type": "Button",
                    "id": "f10393ab-15b9-42a8-a93b-0a6a3f611418",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "attack",
                    "type": "Button",
                    "id": "685508b3-250d-4055-834c-4a8f19497030",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "rotation",
                    "type": "Value",
                    "id": "b044cf1f-6f87-4b71-b2e6-66262760873a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3e1cf69b-6e0a-4219-bdee-812fd80bd603",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b0719ae6-4971-455f-8cc4-b63ecb789065",
                    "path": "<Gamepad>/dpad",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "41edb9db-9785-4877-a351-13201a718460",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "grandmaDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b331cf7d-3946-4ec7-850c-df44f1da7086",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e143b731-14a8-4512-ab0c-51b71d3ff590",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "rotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "parcking",
            "id": "778178e0-c2c8-4c43-9ec9-280b661a0e4c",
            "actions": [
                {
                    "name": "car player",
                    "type": "Value",
                    "id": "3c02a54b-da3b-4675-9819-f6530c6733e6",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "db88c99d-24f9-424a-996c-82a5de57522a",
                    "path": "<Gamepad>/dpad",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "car player",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c44b1099-0da0-446c-a980-226017280c6a",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "car player",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "AllGames",
            "id": "61024d65-b63c-440b-a608-e5aed89ab2ee",
            "actions": [
                {
                    "name": "OnMove",
                    "type": "Value",
                    "id": "8566b3d4-16d5-4035-a457-95c674ee08ed",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "OnWest",
                    "type": "Button",
                    "id": "f5901adf-f58c-4869-9d52-690e0e94cc63",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "OnNorth",
                    "type": "Button",
                    "id": "14cfa1da-957b-4826-a4e0-ded15a2a7ba6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4f9727d9-d06a-4b0f-9813-9bffd734c846",
                    "path": "<Gamepad>/dpad",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "45633ecc-ddbd-4721-9925-76f5ddd3aefc",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2af69fcd-079f-4188-a1af-d1ed65a76cb5",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnWest",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "27f3e64e-a901-4edd-88af-41cf4bce800e",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnNorth",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}